--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -11,25 +11,21 @@
 @import url("reset.css");
 @import url("pygment.css");
 @import url("typogrify.css");
-@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
-@import url(http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600,600italic,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
 /***** Global *****/
 /* Body */
 body {
     background: #FDF6E3;
     color: #8A887B;
     font-size: 16px;
-    font-family: 'Crimson Text', 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: sans-serif;
     /*line-height: 1.429;*/
     margin: 0;
     padding: 0;
     text-align: left;
-    text-shadow:0px 0px 1px #BFBFBF;
     padding-top:120px;
 }
 
-code{
+.highlight{
     border:1px solid #eaeaea;
     background-color:#f8f8f8;
     font-size:11px;
@@ -39,9 +35,9 @@ code{
     -webkit-border-radius:7px;
     padding-left:3px;
     padding-right:3px;
-    padding-bottom:0px;
+    margin-bottom: 2em;
     font-weight:normal;
-    font-family:Consolas, "Liberation Mono", Courier, monospace;
+    font-family: monospace;
 }
 
 /* Headings */
@@ -386,7 +382,7 @@ li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 .hentry .post-info * {font-style: normal;}
 
 	/* Content */
-	.hentry footer {margin-bottom: 2em;}
+	footer {margin-bottom: 2em;}
 	.hentry footer address {display: inline;}
 	#posts-list footer address {display: block;}
 
