--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -117,7 +117,11 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre{background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;}
+/*pre{background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;}*/
+.highlight pre {
+  margin: 5px;
+  overflow: auto;
+}
 
 /* Quotes */
 blockquote {
