--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -14,15 +14,15 @@
 /***** Global *****/
 /* Body */
 body {
-    background: #FDF6E3;
-    color: #8A887B;
-    font-size: 16px;
-    font-family: sans-serif;
-    /*line-height: 1.429;*/
+    background: #F1EEF6 ;
     margin: 0;
     padding: 0;
-    text-align: left;
+    text-align: justify;
     padding-top:120px;
+    color: #333;
+    font-family: Helvetica,Arial,sans-serif;
+    font-size: 20px;
+    line-height: 32px;
 }
 
 .highlight{
